styles.css
/* ... */
.contact-detail {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
.contact-block {
  max-height: 7rem;
  box-shadow:
    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
  background-color: var(--border-color);
  border-radius: 1rem;
  align-items: center;
  padding: 1rem;
  display: flex;
}
.contact-icon {
  width: 3rem;
  border-radius: 50%;
  aspect-ratio: 1/1;
}
.contact-block-text {
  margin-left: 1rem;
  display: flex;
  flex-direction: column;
}
.contact-block-text h3 {
  font-weight: 400;
  font-size: var(--body-font-mobile);
}
.contact-block-text > :nth-child(2) {
  margin-top: 1rem;
  font-weight: 400;
  font-size: 1.3rem;
  color: var(--accent-color);
}
.opening-hours {
  max-height: 12rem;
  box-shadow:
    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
  background-color: var(--border-color);
  color: var(--text-color);
  border-radius: 1rem;
  padding: 1rem;
}
.opening-hours h3 {
  font-size: 1.3rem;
  font-weight: 400;
}
.contact-us-heading {
  padding: 1rem;
}
.form form {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}
.form {
  color: var(--text-color);
  font-weight: 400;
  padding-top: 2rem;
}
.form input {
  color: var(--text-color);
  padding: 1rem;
  aspect-ratio: 8/1;
  border: none;
  border-radius: 1rem;
  transition:
    transform 0.3s ease,
    box-shadow 0.3s ease;

  width: 100%;
  max-height: 3rem;
  background-color: var(--border-color);
}
.form input:focus {
  transform: scale(1.03);
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
  outline: none;
}
.text-area textarea {
  max-height: 12rem;
  transition:
    transform 0.3s ease,
    box-shadow 0.3s ease;
  border: none;
  color: var(--text-color);
  background-color: var(--border-color);
  width: 100%;
  border-radius: 1rem;
  aspect-ratio: 2/1;
  padding: 1rem;
}
.text-area textarea:focus {
  transform: scale(1.03);
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
  outline: none;
}
.form label {
  display: block;
  padding: 0.8rem 0;
}
.form button {
  background-color: var(--accent-color);
  color: var(--bg-color);
}
#site-footer {
  display: grid;
  padding: 2rem;
  background-color: var(--accent-color);
}
/* footer */
.instagram,
.facebook,
.twitter,
.linkedin {
  width: 2rem;
  aspect-ratio: 1/1;
}

.footer-container {
  /* align-content: space-between; */
  grid-template-areas:
    "logo ."
    "link ."
    "contact ."
    "socials .";
  display: grid;

  color: var(--highlight-color);
}
.footer-logo {
  grid-area: logo;
}
.quick-link {
  margin-top: 1rem;
  grid-area: link;
}
.contact {
  margin-top: 1rem;

  flex-wrap: wrap;

  flex-direction: column;
  display: flex;
  align-items: start;
  grid-area: contact;
}

.footer-container ul {
  margin-top: 0.3rem;
  display: flex;

  flex-direction: column;
  gap: 1rem;
}
.socials {
  grid-area: socials;
  display: flex;
  flex-wrap: wrap;
  margin-top: 1rem;

  gap: 1rem;
}
.footer-container h3 {
  font-weight: 400;
  font-size: var(--h2-font-mobile);
}
.ham-menu {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-shadow:
    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
  position: fixed;
  top: 0;
  right: -2000px;
  background-color: var(--accent-color);
  height: 40rem;
  width: 80%;
  max-width: 20rem;
  z-index: 2;
  transition: 0.5s ease;
  border-radius: 1rem;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}
.ham-menu.active {
  right: 0;
}
.ham-menu ul {
  padding: 1rem;
  padding-right: 0;
  margin-top: 4rem;
  display: flex;
  flex-direction: column;
  gap: 2.1rem;
  font-size: var(--h3-font-mobile);
  color: var(--bg-color);
}
.ham-menu li {
  padding-bottom: 0.5rem;
  border-bottom: solid var(--bg-color) 0.01px;
}
.ham-socials {
  gap: 1rem;
  justify-self: flex-start;
  padding: 1rem;
  align-self: flex-start;
}
@media (min-width: 420px) {
  .footer-container {
    grid-template-areas:
      "logo ."
      "link contact"
      "socials .";
  }

  .contact {
    text-align: right;
    align-items: end;
  }
}
/* ... */

